--- a/apps/storefront/src/components/products/product-actions-container.module.scss
+++ b/apps/storefront/src/components/products/product-actions-container.module.scss
@@ -10,7 +10,7 @@
     @media (min-width: $breakpoint-mobile) {
         display: grid;
         grid-template-areas: 'quantity-label options' 'quantity options' '. options';
-        grid-template-rows: 1.75rem 5rem 1fr;
+        grid-template-rows: auto 2.5rem 1fr;
         grid-template-columns: auto 1fr;
         gap: calc(var(--block-spacer-small) / 2) var(--block-spacer-large);
     }
@@ -41,10 +41,10 @@
 }
 
 .button {
-    min-height: 5rem;
-    font-size: 1.5rem;
+    min-height: 3.5rem;
+    font-size: 1.25rem;
 
     @media (min-width: $breakpoint-mobile) {
-        font-size: 1.75rem;
+        font-size: 1rem;
     }
 }
