--- a/apps/storefront/src/app/[domain]/[locale]/blog/blog-content.module.scss
+++ b/apps/storefront/src/app/[domain]/[locale]/blog/blog-content.module.scss
@@ -32,14 +32,10 @@
 
             font-weight: 700;
             text-transform: uppercase;
-            font-size: 1.25rem;
-            line-height: normal;
+            font-size: 0.75rem;
+            line-height: 1rem;
 
             color: var(--color-dark-secondary);
-
-            @media (min-width: $breakpoint-mobile) {
-                font-size: 1.5rem;
-            }
         }
 
         .date,
@@ -49,12 +45,12 @@
 
         .title {
             font-weight: 700;
-            font-size: 2.75rem;
-            line-height: normal;
+            font-size: 1.25rem;
+            line-height: 1.4rem;
         }
 
         .excerpt {
-            font-size: 1.65rem;
+            font-size: 0.85rem;
             font-weight: 400;
             line-height: 1.3;
         }
@@ -64,7 +60,7 @@
 
             .action {
                 width: 100%;
-                height: 4rem;
+                height: 2.5rem;
 
                 text-transform: uppercase;
 
