--- a/apps/storefront/src/app/[domain]/[locale]/cart/cart-content.module.scss
+++ b/apps/storefront/src/app/[domain]/[locale]/cart/cart-content.module.scss
@@ -1,7 +1,6 @@
 @import 'globals';
 
 .container {
-    position: relative;
     display: flex;
     flex-direction: column;
     gap: var(--block-spacer-large);
@@ -13,13 +12,13 @@
         grid-template-columns: 1fr;
         grid-template-rows: auto 1fr;
         grid-template-areas: 'content' 'sidebar';
-        gap: var(--block-spacer-large);
+        gap: var(--block-padding-huge);
 
         max-width: 100%;
         height: 100%;
 
         @media (min-width: $breakpoint-mobile) {
-            grid-template-columns: 1fr minmax(auto, 36rem);
+            grid-template-columns: 1fr minmax(auto, 20rem);
             grid-template-rows: 1fr;
             grid-template-areas: 'content sidebar';
         }
