--- a/apps/storefront/src/components/Footer/footer.module.scss
+++ b/apps/storefront/src/components/Footer/footer.module.scss
@@ -22,7 +22,7 @@
         .blocks {
             display: grid;
             grid-template-columns: 1fr;
-            gap: 2rem;
+            gap: 1rem;
             justify-content: space-between;
             align-items: center;
             text-align: left;
@@ -43,13 +43,14 @@
                 flex-grow: 1;
                 width: 100%;
                 height: 100%;
-                gap: var(--block-spacer-small);
+                gap: 0.25rem;
 
-                font-size: 1.5em;
+                font-size: 0.85rem;
+                line-height: 1.5;
                 font-weight: 400;
 
                 .title {
-                    font-size: 1.5em;
+                    font-size: 1.15rem;
                     font-weight: 700;
                     text-transform: uppercase;
                 }
@@ -59,7 +60,7 @@
                     display: block;
 
                     margin: 0 auto var(--block-padding) auto;
-                    height: 5rem;
+                    height: 4rem;
                     width: 100%;
                     min-width: 15rem;
 
@@ -69,7 +70,7 @@
                     filter: grayscale(100%) brightness(0) invert(1);
 
                     @media (min-width: $breakpoint-mobile) {
-                        height: 7rem;
+                        height: 6rem;
 
                         object-position: left;
                     }
@@ -157,14 +158,14 @@
         @media (min-width: $breakpoint-mobile) {
             display: grid;
             grid-template-columns: auto auto auto;
-            height: 3rem;
+            height: 2rem;
             align-items: flex-end;
             justify-self: flex-end;
         }
     }
     .socials {
         display: flex;
-        height: 3rem;
+        height: 4rem;
         width: 100%;
         width: 100%;
 
@@ -175,13 +176,8 @@
 
         .social {
             position: relative;
-            width: 3.5rem;
-            height: 3.5rem;
-
-            @media (min-width: $breakpoint-mobile) {
-                width: 3rem;
-                height: 3rem;
-            }
+            width: 2rem;
+            height: 2rem;
 
             img {
                 width: 100%;
@@ -201,12 +197,12 @@
         @media (min-width: $breakpoint-mobile) {
             align-items: flex-end;
 
-            height: 4rem;
+            height: 2rem;
             margin: 0;
         }
 
         .policy {
-            font-size: 1.5rem;
+            font-size: 0.75rem;
             font-weight: 700;
             text-transform: uppercase;
 
@@ -214,31 +210,31 @@
                 display: flex;
                 justify-content: center;
                 align-items: flex-end;
-                height: 3rem;
+                height: 2rem;
                 padding: 0;
                 font-weight: 800;
-                font-size: 1.25rem;
+                font-size: 0.85rem;
                 line-height: 1;
             }
         }
 
         .copyright {
-            display: block;
-            font-size: 1.5rem;
+            display: flex;
+            height: 2rem;
+            gap: var(--block-spacer-small);
+
+            font-size: 0.75rem;
             font-weight: 700;
             line-height: normal;
             text-transform: uppercase;
             text-align: left;
 
             @media (min-width: $breakpoint-mobile) {
-                display: flex;
                 justify-content: center;
                 align-items: flex-end;
-                gap: var(--block-spacer-small);
-                height: 3rem;
                 font-weight: 800;
                 text-align: right;
-                font-size: 1.25rem;
+                font-size: 0.85rem;
                 line-height: 1;
             }
         }
