--- a/apps/storefront/src/components/products/collection-block.module.scss
+++ b/apps/storefront/src/components/products/collection-block.module.scss
@@ -5,7 +5,6 @@
     width: 100%;
     height: 100%;
     min-width: 100%;
-    min-height: 36.5rem;
     scrollbar-color: var(--color-block-black) var(--color-block);
     scrollbar-width: thin;
 
@@ -18,10 +17,7 @@
 
         @media (min-width: 560px) {
             justify-content: start;
-            grid-template-columns: repeat(
-                auto-fill,
-                minmax(calc(calc(var(--component-product-card-width)) - var(--block-spacer) * 2), 1fr)
-            );
+            grid-template-columns: repeat(auto-fill, minmax(var(--component-product-card-width), 1fr));
         }
 
         .viewAll {
@@ -46,7 +42,7 @@
                 150ms ease-in-out border-color;
 
             line-height: normal;
-            font-size: 2rem;
+            font-size: 1rem;
             font-weight: 600;
             text-align: center;
 
@@ -56,7 +52,6 @@
             &:is(:hover, :active, :focus, :focus-within) {
                 background-color: var(--accent-secondary-light);
                 border-color: var(--accent-primary-dark);
-                text-decoration: underline dotted 0.125em;
 
                 &,
                 a {
@@ -89,22 +84,14 @@
             @media (min-width: $breakpoint-tablet) and (max-width: $breakpoint-tablet-medium) {
                 --component-product-card-width: calc(100% / 4);
             }
-            @media (min-width: $breakpoint-tablet-medium) and (max-width: 1335px) {
+            @media (min-width: $breakpoint-tablet-medium) {
                 --component-product-card-width: calc(100% / 5);
-            }
-            @media (min-width: 1335px) {
-                --component-product-card-width: calc(100% / 7);
             }
         }
     }
 
     &.horizontal {
         width: 100%;
-
-        @media (min-width: $breakpoint-mobile) {
-            margin: 0 calc(var(--block-padding-large) * -1);
-            width: calc(100% + var(--block-padding-large) * 2);
-        }
 
         .content {
             display: grid;
