Storefront: Fix locale.

--- a/apps/storefront/src/components/product-card/product-card.module.scss
+++ b/apps/storefront/src/components/product-card/product-card.module.scss
@@ -18,6 +18,9 @@
     height: 100%;
     width: 100%;
     min-width: var(--component-product-card-width);
+    @media (max-width: 560px)  {
+        min-width: auto;
+    }
 
     font-size: 16px;
 
