--- a/apps/storefront/src/components/typography/content.module.scss
+++ b/apps/storefront/src/components/typography/content.module.scss
@@ -6,8 +6,6 @@
     font-weight: 500;
     line-height: normal;
 
-    font-size: 0.95rem;
-
     & :is(b, strong) {
         font-weight: 700;
     }
@@ -47,7 +45,7 @@
     }
 
     p {
-        font-size: 1em;
+        font-size: 1rem;
         font-weight: 400;
         line-height: 1.3;
 
@@ -83,15 +81,15 @@
     h1 {
         margin: 0;
 
-        font-size: 2.5em;
-        line-height: 1.05;
+        font-size: 1.75rem;
+        line-height: normal;
         font-weight: 600;
         padding-bottom: 1.5rem;
     }
     h2 {
         margin: calc(var(--block-spacer-large) * 3) 0 0 0;
 
-        font-size: 2em;
+        font-size: 1.5rem;
         line-height: 1.1;
         font-weight: 600;
         padding-bottom: 1rem;
@@ -99,13 +97,13 @@
     h3 {
         margin: calc(var(--block-spacer-large) * 2) 0 0 0;
 
-        font-size: 1.75em;
+        font-size: 1rem;
         line-height: normal;
         font-weight: 500;
         padding-bottom: 1rem;
     }
     h4 {
-        font-size: 1rem;
+        font-size: 0.75rem;
         line-height: normal;
         padding-bottom: 1rem;
     }
@@ -116,9 +114,9 @@
 
     blockquote {
         margin: calc(var(--block-spacer-large) * 2) 0;
-        font-size: 1em;
+        font-size: 1rem;
         text-align: center;
         font-style: italic;
-        letter-spacing: 0.025em;
+        letter-spacing: 0.025rem;
     }
 }
